--- a/cart/templates/cart/chocolate_info.html
+++ b/cart/templates/cart/chocolate_info.html
@@ -1,2 +1,2 @@
 <!-- Chocolate friendly name -->
- <p class="my-0 purple-text">{{ item.chocolate.choc_friendly_name }}</p>
+ <h4 class="my-2 purple-text">{{ item.chocolate.choc_friendly_name }}</h4>
