--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -6,7 +6,7 @@
     <div class="toast-header rounded-2">
         <strong class="mr-auto">Success!</strong>
         <button type="button" class="ml-2 mb-1 close text-white" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true" class="text-white">&times;</span>
         </button>
     </div>
 
