--- a/static/css/base.css
+++ b/static/css/base.css
@@ -862,7 +862,9 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     padding-right: 3rem !important;
 }
 
-
+#card-element {
+    font-size: .6rem;
+}
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------ Toast Message Styling */
