--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@ body {
 
 #main-nav {
     margin-top: .3rem;
-    max-width: 98%;
+    max-width: 98% !important;
     margin-left: auto;
     margin-right: auto;
 }
@@ -260,9 +260,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c", endColorstr="#882bde", GradientType=1);
     padding-top: .1rem;
     padding-bottom: .1rem;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 100%;
     border: 1px solid #551b8c;
 }
 
@@ -872,13 +870,14 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 .message-container {
     position: fixed;
     top: 5px;
-    right: 3px;
+    right: 5px;
     z-index: 9999999;
     /* Fade in animation was copied directly from
     https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/ */
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    box-shadow: 0px 0px 6px #ed82ed;
 }
 
 @keyframes fadeInAnimation {
@@ -918,6 +917,8 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 
 
 .toast-body {
+    max-width: 310px;
+    height: auto;
     background: #882bde;
     color: white;
     border-top: 1px solid #c71585;
