Add 404.html to project level templates directorrry

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Treat yourself now button, links to all chocolates, from index.html -->
-    <div id="treat-yourself-button">
+    <div class="treat-yourself-button">
         <p>
             <a href="{% url 'chocolates' %}"><strong>Treat yourself now!</strong></a>
         </p>
