--- a/static/css/base.css
+++ b/static/css/base.css
@@ -516,7 +516,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 /* The glow effect for the shop button below was adapted from code by codepen user Kanishk Kunal 
 link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 
-#treat-yourself-button {
+.treat-yourself-button {
     width: 15rem;
     position: relative;
     top: 45%;
@@ -528,13 +528,13 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     box-shadow: 0px 0px 15px #ed82ed;
 }
 
-#treat-yourself-button:hover {
+.treat-yourself-button:hover {
     background: #c71585;
     border: 1px solid #ed82ed;
     box-shadow: 0px 0px 100px #ed82ed;
 }
 
-#treat-yourself-button a {
+.treat-yourself-button a {
     padding-top: .8rem;
     display: flex;
     align-items: center;
@@ -1129,12 +1129,12 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
         text-shadow: #ed82ed 0px 0 0px;
     }
 
-    #treat-yourself-button {
+    .treat-yourself-button {
         width: 20rem;
         top: 60%;
     }
 
-    #treat-yourself-button a {
+    .treat-yourself-button a {
         font-size: 2rem !important;
         font-weight: 100;
     }
