Fix flake8 error in chocolateform

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -9,10 +9,10 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
+                <h1 class="display-4 purple-text">
                     Oops!
                 </h1>
-                <p>That page doesn't exist..</p>
+                <p class="display-4 purple-text">That page doesn't exist..</p>
                 <div class="treat-yourself-button my-5">
                     <h4>
                         <a href="{% url 'chocolates' %}" 
