--- a/chocolates/templates/chocolates/custom_widget_templates/custom_clearable_file_input.html
+++ b/chocolates/templates/chocolates/custom_widget_templates/custom_clearable_file_input.html
@@ -12,7 +12,10 @@
 {% endif %}<br>
 {{ widget.input_text }}
 {% endif %}
+
+<!-- Form input for chocolate image, from customer_clearable_file_input.html -->
 <span class="btn btn-black rounded-0 btn-file">
+    <!-- Select Image button, from customer_clearable_file_input.html -->
     Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"
         {% include "django/forms/widgets/attrs.html" %}>
 </span>
