--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
 
           <!-- My Account, from base.html -->
           <li class="list-inline-item dropdown">
-            <a class="purple-text nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+            <a class="purple-text nav-link" href="#" id="user-options-main-nav" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <div class="text-center">
                 <div><i class="fas fa-user fa-lg"></i></div>
@@ -106,7 +106,7 @@
             </a>
 
             <!-- Account log in dtl logic, from base.html -->
-            <div class="dropdown-menu border-purple" aria-labelledby="user-options">
+            <div class="dropdown-menu border-purple" aria-labelledby="user-options-main-nav">
                 {% if request.user.is_authenticated %}
                   {% if request.user.is_superuser %}
                   <a href="{% url 'add_chocolate' %}" class="dropdown-item purple-text">Chocolate Management</a>
