Add media query for order number font size to display correctly

--- a/cart/templates/cart/quantity_form.html
+++ b/cart/templates/cart/quantity_form.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 </form>
-<!-- Form ends above this line -->
+<!-- Form ends above this line, from quantity-form.html -->
 <a class="update-link text-success"><small>Update</small></a>
 <a class="remove-item text-danger float-right"
     id="mobile_remove_{{ item.item_id }}"><small>Remove</small></a>
