--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -175,7 +175,7 @@
     <div id="loading-overlay">
         <h1 class="loading-heart">
             <span>
-                <span class="loading-heart">&#10084</span>
+                <span class="loading-heart">&#10084;</span>
             </span>
         </h1>
     </div>
