--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -46,7 +46,7 @@
                         <p class="mb-0 purple-text">Order Number</p>
                     </div>
                     <div class="col-12 col-md-8 text-md-right active-cart">
-                        <p class="mb-0">{{ order.order_number }}</p>
+                        <p class="mb-0 order-number">{{ order.order_number }}</p>
                     </div>
                 </div>
 
