--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -17,11 +17,9 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row mt-4">
             <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Checkout</h2>
-                <hr>
+                <h2 class="purple-text mt-3">Checkout</h2>
             </div>
         </div>
 
@@ -31,13 +29,13 @@
             <div class="col-12 col-lg-6 order-lg-last mb-5">
 
                 <!-- Order Summary -->
-                <p class="text-muted">Order Summary: {{ chocolate_count }} items</p>
+                <p class="text-muted bright-purple-text mb-5">Order Summary: {{ chocolate_count }} items</p>
                 <div class="row">
                     <div class="col-7 offset-2">
-                        <p class="mb-1 mt-0 small text-muted">Item</p>
+                        <p class="mb-1 mt-0 small purple-text font-weight-bold">Item</p>
                     </div>
                     <div class="col-3 text-right">
-                        <p class="mb-1 mt-0 small text-muted">Subtotal</p>
+                        <p class="mb-1 mt-0 small purple-text font-weight-bold">Subtotal</p>
                     </div>
                 </div>
 
@@ -49,59 +47,59 @@
                         <div class="col-2 mb-1">
                             <a href="{% url 'chocolate_detail' item.chocolate.id %}">
                                 {% if item.chocolate.choc_image %}
-                                    <img class="w-100" src="{{ item.chocolate.choc_image.url }}" alt="{{ chocolate.choc_friendly_name }}">
+                                    <img class="w-100 rounded-lg" src="{{ item.chocolate.choc_image.url }}" alt="{{ chocolate.choc_friendly_name }}">
                                 {% else %}
-                                    <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ chocolate.choc_name }}">
+                                    <img class="w-100 rounded-lg" src="{{ MEDIA_URL }}noimage.png" alt="{{ chocolate.choc_friendly_name }}">
                                 {% endif %}
                             </a>
                         </div>
 
                         <!-- Chocolate details -->
                         <div class="col-7">
-                            <p class="my-0"><strong>{{ item.chocolate.choc_name }}</strong></p>
+                            <p class="my-0 purple-text">{{ item.chocolate.choc_friendly_name }}</p>
                             <!-- <p class="my-0 small">Size: {% if item.chocolate.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p> -->
-                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                            <p class="my-0 small bright-purple-text">Qty: {{ item.quantity }}</p>
                         </div>
 
                         <!-- Subtotal -->
                         <div class="col-3 text-right">
-                            <p class="my-0 small text-muted">€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</p>
+                            <p class="my-0 small purple-text font-weight-bold">€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</p>
                         </div>
                     </div>
                 {% endfor %}
-                <hr class="my-0">
+                <hr class="my-4">
 
                 <!-- Order summary and delivery cost -->
-                <div class="row text-black text-right">
+                <div class="row text-right checkout-total-text">
                     <div class="col-7 offset-2">
-                        <p class="my-0">Order Total:</p>
-                        <p class="my-0">Delivery:</p>
-                        <p class="my-0">Grand Total:</p>
+                        <p class="my-0 purple-text">Order Total:</p>
+                        <p class="my-0 bright-purple-text">Delivery:</p>
+                        <p class="my-0 purple-text font-weight-bold">Grand Total:</p>
                     </div>
-                    <div class="col-3">
-                        <p class="my-0">€{{ total | floatformat:2 }}</p>
-                        <p class="my-0">€{{ delivery | floatformat:2 }}</p>
-                        <p class="my-0"><strong>€{{ grand_total | floatformat:2 }}</strong></p>
+                    <div class="col-3 checkout-total-text">
+                        <p class="my-0 purple-text">€{{ total | floatformat:2 }}</p>
+                        <p class="my-0 bright-purple-text">€{{ delivery | floatformat:2 }}</p>
+                        <p class="my-0 purple-text font-weight-bold"><strong>€{{ grand_total | floatformat:2 }}</strong></p>
                     </div>
                 </div>
             </div>
 
             <!-- Checkout form is rendered below -->
-            <div class="col-12 col-lg-6">
-                <p class="text-muted">Please fill out the form below to complete your order</p>
+            <div class="col-12 col-lg-6 mt-5">
+                <p class="text-muted mb-4 pl-2 purple-text">Please fill out the form below to make a payment and complete your order</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
 
                     <!-- Form is divided into 3 fieldset sections -->
                     <!-- First fieldset displays customer details -->
-                    <fieldset class="rounded-lg px-3 mb-5">
+                    <fieldset class="rounded-lg px-1 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto"> Your Details</legend>
                         {{ order_form.full_name | as_crispy_field }}
                         {{ order_form.email | as_crispy_field }}
                     </fieldset>
 
                     <!-- Second fieldset displays delivery details -->
-                    <fieldset class="rounded-lg px-3 mb-5">
+                    <fieldset class="rounded-lg px-1 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Delivery Details</legend>
                         {{ order_form.phone_number | as_crispy_field }}
                         {{ order_form.street_address1 | as_crispy_field }}
@@ -114,20 +112,20 @@
                         <!-- Allows authenticated users to save the information to their profile -->
                         <div class="rounded-lg form-check form-check-inline float-right mr-0">
 							{% if user.is_authenticated %}
-								<label class="form-check-label" for="id-save-info">Save this delivery information to my Chocelegance profile</label>
+								<label class="form-check-label bright-purple-text" for="id-save-info">Save this delivery information to my Chocelegance profile</label>
                                 <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info" checked>
 							{% else %}
-								<label class="form-check-label" for="id-save-info">
-                                    <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or 
-                                    <a class="text-info" href="{% url 'account_login' %}">login</a> to save this information
+								<label class="form-check-label purple-text" for="id-save-info">
+                                    <a class="bright-purple-text" href="{% url 'account_signup' %}">Create an account</a> or 
+                                    <a class="bright-purple-text" href="{% url 'account_login' %}">login</a> to save this information
                                 </label>
 							{% endif %}
 						</div>
                     </fieldset>
 
                     <!-- Third fieldset relates to the payment information, this will be handled by Stripe -->
-                    <fieldset class="px-3">
-                        <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                    <fieldset class="px-1">
+                        <legend class="fieldset-label small text-black px-1 w-auto">Payment</legend>
                         <!-- A Stripe card element will go here -->
                         <div class="mb-3" id="card-element"></div>
 
@@ -140,30 +138,27 @@
                     </fieldset>
 
                     <div class="submit-button text-right mt-5 mb-2">
+
+                        <!-- Notification that the customer's card is about to be charged! -->
+						<p class="charge-notification text-center mb-0 float-right">
+							<span class="icon">
+								<i class="fas fa-exclamation-circle"></i>
+							</span>
+							<span class="text-center">Your card will be charged <strong>€{{ grand_total|floatformat:2 }}</strong></span>
+						</p>
                         
                         <!-- Link back to shopping cart in case adjustment is desired -->
-						<a href="{% url 'view_cart' %}" class="btn btn-outline-black rounded-0">
-							<span class="icon">
-								<i class="fas fa-chevron-left"></i>
-							</span>
-							<span class="font-weight-bold">Adjust Cart</span>
+						<a href="{% url 'view_cart' %}" class="btn cart-keep-shopping-button">
+							<span class="">Adjust Cart</span>
 						</a>
 
                         <!-- Submit button, will be executed by javascript -->
-						<button id="submit-button" class="btn btn-black rounded-0">
-							<span class="font-weight-bold">Complete Order</span>
+						<button id="submit-button" class="btn cart-checkout-button">
+							<span>Complete Order</span>
 							<span class="icon">
 								<i class="fas fa-lock"></i>
 							</span>
 						</button>
-
-                        <!-- Notification that the customer's card is about to be charged! -->
-						<p class="small text-danger my-0">
-							<span class="icon">
-								<i class="fas fa-exclamation-circle"></i>
-							</span>
-							<span>Your card will be charged <strong>€{{ grand_total|floatformat:2 }}</strong></span>
-						</p>
 					</div>
                 </form>
             </div>
