Adjust loading animation on payment screen

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -137,7 +137,7 @@
                         
                     </fieldset>
 
-                    <div class="submit-button text-right mt-5 mb-2">
+                    <div class="checkout-button-container text-right mt-5 mb-2">
 
                         <!-- Notification that the customer's card is about to be charged! -->
 						<p class="charge-notification text-center mb-0 float-right">
