--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -123,9 +123,9 @@ select:invalid {
     align-items: center;
     color: #c71585;
     text-shadow: 0 0px 2px #ed82ed;
-    margin-left: 1rem;
-    padding-top: .2rem;
-    animation: loadingHeartFadeIn ease 2s;
+    /* margin-left: 1rem;
+    padding-top: .2rem; */
+    animation: loadingHeartFadeIn ease 1.3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
@@ -137,11 +137,13 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 
 @keyframes loadingHeartFadeIn {
     0% {
-        transform: scale(1.1);
+        transform: scale(.2);
         opacity: 1;
     }
     100% {
-        transform: scale(3);
+        transform: scale(2.1);
         opacity: 1;
     }
 }
+
+
