Adjust order number size to improve responsiveness

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -52,7 +52,7 @@
                         
                     </div>
                     <div class="row col-12 mt-3">
-                        <p class="purple-text mb-5 px-2">The chocolates in your cart are shown below.<br>Our AI algorithm detected that you have very good taste...</p>
+                        <p class="purple-text mb-5 mt-4 pl-3">The chocolates in your cart are shown below.<br>Our AI algorithm detected that you have very good taste...</p>
                     </div>
                 </div>
 
