--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -221,11 +221,11 @@
 <div class="row">
     <div class="col-lg-4 offset-lg-4 col-md-6 offset-3 text-center">
         {% if from_profile %}
-        <a href="{% url 'profile' %}" class="btn btn-purple rounded-lg my-2 w-75">
+        <a href="{% url 'profile' %}" class="btn keep-shopping-button my-4">
             <p>Back to Profile!</p>
         </a>
         {% else %}
-        <a href="{% url 'chocolates' %}" class="btn btn-purple rounded-lg my-2 w-75">
+        <a href="{% url 'chocolates' %}" class="btn keep-shopping-button my-4">
             <p>Back to Chocolates!</p>
         </a>
         {% endif %}
