--- a/cart/templates/cart/cart_total.html
+++ b/cart/templates/cart/cart_total.html
@@ -1,6 +1,6 @@
 <!-- This row renders the details of the transaction total -->
-<h6 class="purple-text"><strong>Cart Total: €{{ total|floatformat:2 }}</strong></h6>
-
-<h6 class="bright-purple-text"><strong>Delivery: €{{ delivery|floatformat:2 }}</strong></h6>
-
-<h4 class="mt-2 purple-text mb-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
+<h6 class="purple-text">Item Quantity: {{ chocolate_count }} items</h6>
+<h6 class="purple-text">Cart Total: €{{ total|floatformat:2 }}</h6>
+<h6 class="bright-purple-text">Delivery: €{{ delivery|floatformat:2 }}</h6>
+<hr class="purple-text">
+<h4 class="mt-2 purple-text mb-5"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
