Adjust layout of order totals in checkout.html

--- a/cart/templates/cart/cart_total.html
+++ b/cart/templates/cart/cart_total.html
@@ -3,4 +3,4 @@
 <h6 class="purple-text">Cart Total: €{{ total|floatformat:2 }}</h6>
 <h6 class="bright-purple-text">Delivery: €{{ delivery|floatformat:2 }}</h6>
 <hr class="purple-text">
-<h4 class="mt-2 purple-text mb-5"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
+<h4 class="mt-2 purple-text mb-5"><strong>Order Total: €{{ grand_total|floatformat:2 }}</strong></h4>
