Add about app to project

--- a/cart/templates/cart/cart_total.html
+++ b/cart/templates/cart/cart_total.html
@@ -1,5 +1,5 @@
-<!-- This row renders the details of the transaction total -->
-<h6 class="purple-text">Item Quantity: {{ chocolate_count }} items</h6>
+<!-- This row renders the details of the transaction total, from cart_total.html -->
+<h6 class="purple-text">Item Quantity: {{ chocolate_count }} item(s)</h6>
 <h6 class="purple-text">Cart Total: €{{ total|floatformat:2 }}</h6>
 <h6 class="bright-purple-text">Delivery: €{{ delivery|floatformat:2 }}</h6>
 <hr class="purple-text">
