--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -81,18 +81,11 @@
             </div>
         </li>
 
-        <!-- Special Offers drop down menu, from main-nav.html -->
-        <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link purple-text-transition h4" href="#" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
+        <!-- About page link, from main-nav.html -->
+        <li class="nav-item">
+            <a class="font-weight-bold nav-link purple-text-transition h4" href="{% url 'about' %}" aria-expanded="false">
                 About
             </a>
-            <!-- <div class="dropdown-menu border-purple" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item purple-text">New Arrivals</a>
-                <a href="" class="dropdown-item purple-text">Deals</a>
-                <a href="" class="dropdown-item purple-text">Clearance</a>
-                <a href="" class="dropdown-item purple-text"><strong>All Specials</strong></a>
-            </div> -->
         </li>
     </ul>
 </div>
