--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -17,37 +17,57 @@
 <!-- The block content below is injected into the main base.html template -->
 {% block content %}
 
-<div id="hero-image-container">
+<div id="about-outer-container">
 
-    <!-- Chocelegance logo placed in hero container, will only be displayed on mobile, from index.html -->
-    <div id="mobile-logo" class="d-block d-sm-block d-md-block d-lg-none">
-        <a href="{% url 'home' %}" class="nav-link d-inline-flex">
-          <h2 class=""><strong>chocelegance</strong></h2><span class="small mobile-logo-heart">&#10084;</span>
-        </a>
-      </div>
+    <div
+        class="row about-container col-10 offset-1 col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+        <div class="about-text mt-5">
+            <h2 class="purple-text border-purple border-radius-10 text-center">About</h2>
+            <br>
+            <figure>
+                <blockquote class="blockquote purple-text">
+                    <p>
+                        "Every individual piece of chocolate crafted at Chocelegance is intended to be a unique experience. A symphony of delight, rich in flavour and a celebration of taste. When
+                        you eat our chocolates, you should taste all the notes that our organic cocoa beans have to offer!"
+                    </p>
+                </blockquote>
 
+                <figcaption class="blockquote-footer bright-purple-text">
+                    Carol Ruiterman
 
+                    <span>
+                        , Creative Director and founder at Chocelegance
+                    </span>
+                </figcaption>
+            </figure>
+            <p class="purple-text">
+                This was already the vision of founder Carol Ruiterman when, in 2017, she opened a dessert shop in
+                Amsterdam with her daughter Sabine. With the belief that they could improve the taste of chocolate with
+                their own unique perspective and creativity. While also offering innovative recipes that caters to the evolving dietary requirements of chocolate lovers!
+                <br>
+                <br>
+                Chocelegance's innovative diet friendly creations include recipes for <strong class="bright-purple-text">Keto</strong>, <strong class="bright-purple-text">Vegan</strong> and <strong class="bright-purple-text">Gluten-Free</strong> diets. 
+                <br>
+                <br>
+                At Chocelegance, everything revolves around originality. From classic combinations to surprising flavors, from amaretto to anise, from pepper to poppy seeds, from tea to thyme. These unique flavors are intensified by combining them with the purest chocolate foundations from an assortment of up to 70% dark chocolate. 
+                <br>
+                <br>
+                To preserve this beautiful, rich chocolate flavor, Chocelegance's recipes replace the butter and sugar typically used with pure cream. This enhances the flavor and ensures that the filling is the star of each bonbon. All in support of the most important belief: it must taste absolutely delicious!
+            </p>
+        </div>
 
-    <!-- Hero image main text, from index.html -->
-    <div id="hero-image-text-heading">
-        <p>
-            It's time to<br><strong>treat*</strong><br>yourself!
-        <p>
     </div>
 
-    <!-- Hero image sub text, from index.html -->
-    <div id="hero-image-text-sub-heading">
-        <p>
-            <strong>*guaranteed guilt free</strong>
-        </p>
+    <div class="row faqs-container">
+        <div class="faq-text pt-1 mt-5">
+            <h2 class="purple-text border-purple border-radius-10 text-center">FAQs</h2>
+
+
+        </div>
+
     </div>
 
-    <!-- Treat yourself now button, links to all chocolates, from index.html -->
-    <div class="treat-yourself-button">
-        <p>
-            <a href="{% url 'chocolates' %}"><strong>Treat yourself now!</strong></a>
-        </p>
-    </div>
+
 
 </div>
 
