--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -2,6 +2,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'about/css/about.css' %}">
+{% endblock %}
+
 <!-- Additional sub-header block below main header, extended from base.html -->
 {% block page_header %}
 <div class="container header-container col-8 mx-auto">
@@ -19,16 +23,17 @@
 
 <div id="about-outer-container">
 
-    <div
-        class="row about-container col-10 offset-1 col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+    <div class="row about-container col-10 offset-1 col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <div class="about-text mt-5">
-            <h2 class="purple-text border-purple border-radius-10 text-center">About</h2>
+            <h2 class="purple-text text-center">About Us</h2>
             <br>
             <figure>
                 <blockquote class="blockquote purple-text">
                     <p>
-                        "Every individual piece of chocolate crafted at Chocelegance is intended to be a unique experience. A symphony of delight, rich in flavour and a celebration of taste. When
-                        you eat our chocolates, you should taste all the notes that our organic cocoa beans have to offer!"
+                        "Every individual piece of chocolate crafted at Chocelegance is intended to be a unique
+                        experience. A symphony of delight, rich in flavour and a celebration of taste. When
+                        you eat our chocolates, you should taste all the notes that our organic cocoa beans have to
+                        offer!"
                     </p>
                 </blockquote>
 
@@ -43,32 +48,121 @@
             <p class="purple-text">
                 This was already the vision of founder Carol Ruiterman when, in 2017, she opened a dessert shop in
                 Amsterdam with her daughter Sabine. With the belief that they could improve the taste of chocolate with
-                their own unique perspective and creativity. While also offering innovative recipes that caters to the evolving dietary requirements of chocolate lovers!
+                their own unique perspective and creativity. While also offering innovative recipes that caters to the
+                evolving dietary requirements of chocolate lovers!
                 <br>
                 <br>
-                Chocelegance's innovative diet friendly creations include recipes for <strong class="bright-purple-text">Keto</strong>, <strong class="bright-purple-text">Vegan</strong> and <strong class="bright-purple-text">Gluten-Free</strong> diets. 
+                Chocelegance's innovative diet friendly creations include recipes for <strong
+                    class="bright-purple-text">Keto</strong>, <strong class="bright-purple-text">Vegan</strong> and
+                <strong class="bright-purple-text">Gluten-Free</strong> diets.
                 <br>
                 <br>
-                At Chocelegance, everything revolves around originality. From classic combinations to surprising flavors, from amaretto to anise, from pepper to poppy seeds, from tea to thyme. These unique flavors are intensified by combining them with the purest chocolate foundations from an assortment of up to 70% dark chocolate. 
+                At Chocelegance, everything revolves around originality. From classic combinations to surprising
+                flavors, from amaretto to anise, from pepper to poppy seeds, from tea to thyme. These unique flavors are
+                intensified by combining them with the purest chocolate foundations from an assortment of up to 70% dark
+                chocolate.
                 <br>
                 <br>
-                To preserve this beautiful, rich chocolate flavor, Chocelegance's recipes replace the butter and sugar typically used with pure cream. This enhances the flavor and ensures that the filling is the star of each bonbon. All in support of the most important belief: it must taste absolutely delicious!
+                To preserve this beautiful, rich chocolate flavor, Chocelegance's recipes replace the butter and sugar
+                typically used with pure cream and diet friendly organic alternatives. This enhances the flavor and
+                ensures that the filling is the star of each bonbon. All in support of the most important belief: it
+                must taste absolutely delicious!
             </p>
         </div>
-
     </div>
 
-    <div class="row faqs-container">
-        <div class="faq-text pt-1 mt-5">
-            <h2 class="purple-text border-purple border-radius-10 text-center">FAQs</h2>
+    <div class="row faq-container col-10 offset-1 col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+        <div class="faq-text mt-5">
+            <h2 class="purple-text text-center">FAQs</h2>
+            <br>
+            <p class="purple-text">
+                Below you can find answer to our most frequently asked questions!
+                <br>
+                <br>
+                If you can't find what you're looking for here, don't worry, we're always happy to help. Just send us an email at <span class="bright-purple-text">contact@chocelegance.nl</span> and we'll respond as quickly as possibly (usually within 24 hours).
+            </p>
+            <br>
+
+
+            <!-- Accordion section containing the questions and answers -->
+
+            <div class="accordion mx-auto mb-5 border-purple border-radious-10" id="accordionExample">
+                <div class="card">
+
+                    <!-- Accordiong header containing question text -->
+                    <div class="card-header" id="headingOne">
+                        <h2 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                                aria-expanded="true" aria-controls="collapseOne">
+                                Collapsible Group Item #1
+                            </button>
+                        </h2>
+                    </div>
+
+                    <!-- Accordiong body containing answer text -->
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+                            squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa
+                            nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid
+                            single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft
+                            beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice
+                            lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                            probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h2 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Collapsible Group Item #2
+                            </button>
+                        </h2>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+                            squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa
+                            nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid
+                            single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft
+                            beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice
+                            lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                            probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h2 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Collapsible Group Item #3
+                            </button>
+                        </h2>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                        data-parent="#accordionExample">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+                            squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa
+                            nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid
+                            single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft
+                            beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice
+                            lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                            probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
 
         </div>
-
     </div>
-
-
-
 </div>
 
 
