--- a/static/css/base.css
+++ b/static/css/base.css
@@ -83,7 +83,10 @@ input[name='q']::placeholder {
 }
 
 
+.dropdown-login-status {
+    padding-left: 1.5rem;
 
+}
 
 /* ------------------------------------------------------------------------------------------------------------------------------ Heart Logo Styling */
 
