--- a/static/css/base.css
+++ b/static/css/base.css
@@ -85,7 +85,8 @@ input[name='q']::placeholder {
 
 .dropdown-login-status {
     padding-left: 1.5rem;
-
+    padding-top: .5rem;
+    font-size: .8rem;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------------------ Heart Logo Styling */
