Change item to cart quantity in cart.html

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -27,6 +27,8 @@
         <div class="about-text mt-5">
             <h2 class="purple-text text-center">About Us</h2>
             <br>
+
+            <!-- Blockquote and 'about us' text below was adapted from https://puccinibomboni.com/en/our-story -->
             <figure>
                 <blockquote class="blockquote purple-text">
                     <p>
@@ -45,6 +47,7 @@
                     </span>
                 </figcaption>
             </figure>
+            <br>
             <p class="purple-text">
                 This was already the vision of founder Carol Ruiterman when, in 2017, she opened a dessert shop in
                 Amsterdam with her daughter Sabine. With the belief that they could improve the taste of chocolate with
