--- a/cart/templates/cart/checkout_buttons.html
+++ b/cart/templates/cart/checkout_buttons.html
@@ -7,10 +7,10 @@
     </p>
     {% endif %}
     <a href="{% url 'chocolates' %}" class="btn cart-keep-shopping-button">
-        <span class="text-uppercase">Keep Shopping</span>
+        <span>Keep Shopping</span>
     </a>
     <a href="{% url 'checkout' %}" class="btn cart-checkout-button">
-        <span class="text-uppercase">Secure Checkout</span>
+        <span">Secure Checkout</span>
         <span class="icon">
             <i class="fas fa-lock"></i>
         </span>
